# magnum-emscripten

./: .gitignore  CMakeLists.txt  MyApplication.js  MyApplication.wasm  build-em.sh  build.sh  magnum_batch_install.sh  package.json
src/: MyApplication.cpp
