cmake_minimum_required(VERSION 2.8.12)
project(MyApplication)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 14)
set(OpenGL_GL_PREFERENCE "GLVND")

set_directory_properties(PROPERTIES
	CORRADE_CXX_STANDARD ${CMAKE_CXX_STANDARD}
	CORRADE_USE_PEDANTIC_FLAGS ON)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/modules/")

add_subdirectory(src)
